--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <head>
         <meta charset="utf-8">
 
-        <title>cellzilla</title>
+        <title>atomicubes</title>
 
-        <meta name="description" content="Cell Simulations with the Marching Cubes Algorithm.">
-        <meta name="author" content="Lisa Lau and Tyler Wolf Leonhardt">
+        <meta name="description" content="Objects created from cubes which appear when they are approached.">
+        <meta name="author" content="Tyler Wolf Leonhardt">
 
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -35,10 +35,10 @@
     <body>
         <div class="centered">
             <h1 align="center" style="margin-bottom: 0em;">
-                cellzilla
+                atomicubes
             </h1>
             <h2 align="center">
-                Cell simulations with the marching cubes algorithm.
+                Objects created from cubes which appear when they are approached.
             </h2>
             <table align="center">
                 <tr>
@@ -51,7 +51,7 @@
                         </h2>
                     </td>
                     <td align="center">
-                        <a href="app/cellzilla-single.html">
+                        <a href="app/atomicubes.html">
                             <img src="index/app.png" width="256em" height="256em" align="bottom" />
                         </a>
                         <h2 style="margin-top: 0em;">
@@ -77,7 +77,7 @@
                         </h2>
                     </td>
                     <td align="center">
-                        <a href="https://github.com/Tyleo/cellzilla">
+                        <a href="https://github.com/Tyleo/atomicubes">
                             <img src="index/code.png" width="256em" height="256em" align="bottom" />
                         </a>
                         <h2 style="margin-top: 0em;">
