Added something to the presentation (too lazy to look) and also added a backlink to the proposal.

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -91,7 +91,7 @@
                     </section>
                     <section>
                         <h2>
-                            Then put in a dummy mesh
+                            Then put in a dummy mesh for physics
                         </h2>
                     </section>
                     <section>
