--- a/proposal/proposal.html
+++ b/proposal/proposal.html
@@ -53,6 +53,11 @@
             <div class="paragraph">
                 After creating the cube-lattice bridge described above, scripts can be applied to each individual cube to create certain effects as they are approached. Some examples of effects which may be visually appealing include having the cubes fly together, having them fade into existence or coloring them. These effects should be simple to implement and without significant computational expense. We will explore the effects of cubes flying together to make a platform appear upon which other objects may rest.
             </div>
+            <br/>
+            <br/>
+            <div align="center"><b><a href="../index.html" style="font-size: 1.25em;">&lt back</a></b></div>
+            <br/>
+            <br/>
         </div>
     </body>
 </html>
