Finished the presentation by adding a whole bunch of images.

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -88,26 +88,31 @@
                         <h2>
                             First we create our framework
                         </h2>
+                        <img src="assets/framework.png" height="540" width="960" />
                     </section>
                     <section>
                         <h2>
                             Then put in a dummy mesh for physics
                         </h2>
+                        <img src="assets/visible-mesh.png" height="540" width="960" />
                     </section>
                     <section>
                         <h2>
                             We make the mesh invisible
                         </h2>
+                        <img src="assets/invisible-mesh.png" height="540" width="960" />
                     </section>
                     <section>
                         <h2>
                             Then add a lattice of atomicubes
                         </h2>
+                        <img src="assets/cube-lattice.png" height="540" width="960" />
                     </section>
                     <section>
                         <h2>
                             These particular cubes are controlled with parametric equations
                         </h2>
+                        <img src="assets/parametric-equation.png" height="114" width="625" />
                         <h3>
                             But the possiblities are endless!
                         </h3>
