Changed tagline, started final report.

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -6,7 +6,7 @@
 
         <title>atomicubes</title>
 
-        <meta name="description" content="Objects created from cubes which appear when they are approached.">
+        <meta name="description" content="Objects created from cubes which appear when approached.">
         <meta name="author" content="Tyler Wolf Leonhardt">
 
         <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -48,7 +48,7 @@
                 <section>
                     <h1>atomicubes</h1>
                     <p>
-                        <small>Objects created from cubes which appear when they are approached.</small>
+                        <small>Objects created from cubes which appear when approached.</small>
                     </p>
                 </section>
                 <section>
