--- a/proposal/proposal.html
+++ b/proposal/proposal.html
@@ -5,7 +5,7 @@
 
         <title>atomicubes</title>
 
-        <meta name="description" content="Objects created from cubes which appear when they are approached.">
+        <meta name="description" content="Objects created from cubes which appear when approached.">
         <meta name="author" content="Tyler Wolf Leonhardt">
 
         <link rel="stylesheet" type="text/css" href="../index/tyleo.css">
@@ -14,7 +14,7 @@
     <body>
         <div class="centered">
             <div class="title">atomicubes</div>
-            <div class="subtitle">Objects created from cubes which appear when they are approached.</div>
+            <div class="subtitle">Objects created from cubes which appear when approached.</div>
             <br/>
             <div class="paragraph">
                 Entities in a game world are typically created with a solid mesh that is always visible. One example of this is a bridge which consists of a singular hexahedral mesh stretched over a chasm along one of its axes. With a texture applied to the mesh, it appears as though it is a solid object. In particular, when treating the mesh as a rigid body, other rigid bodies will collide with the mesh as one would expect an object to collide with a bridge in the real world. This is represented in Figure 1, below. Without the texture, objects would still collide with the bridge but it would be difficult for a user to determine where the edges of the bridge begin and end. By creating this untextured bridge mesh and then filling it with cubes, it could be made to appear as though any object coming into collision with the mesh were actually being held up by the cubes. This is represented in Figure 2, below.
