--- a/video/video.html
+++ b/video/video.html
@@ -6,7 +6,7 @@
 
         <title>atomicubes</title>
 
-        <meta name="description" content="Objects created from cubes which appear when they are approached.">
+        <meta name="description" content="Objects created from cubes which appear when approached.">
         <meta name="author" content="Tyler Wolf Leonhardt">
 
         <meta name="apple-mobile-web-app-capable" content="yes" />
