Missed one tagline.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 atomicubes
             </h1>
             <h2 align="center">
-                Objects created from cubes which appear when they are approached.
+                Objects created from cubes which appear when approached.
             </h2>
             <table align="center">
                 <tr>
